@@ -1,6 +1,10 @@
 v3.6.5 (XXXX-XX-XX)
 -------------------
 
+* Fix cluster-internal request forwarding for VST requests that do not have any
+  Content-Type header set. Such requests could have been caused by the Java
+  driver (ES-635).
+
 * Added vertex validation in case of a SmartGraph edge definition update.
 
 * Fix untenable ultra precondition for removeServer.
